Add lanelet drawing tool
